tests/negative/lexer_unclosed_string.uzpp
// XATOLIK_KUTILMOQDA: lexer: yopilmagan satr litterali
ulash "uzpp_runtime.hpp"
butun asosiy() {
    matn s = "yopilmagan;
    qaytarish 0;
}
